# soprocli-python

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: uploader.yml
examples/: health.py
internal/sopro/: sopro.proto
scripts/: compiler.sh
src/soprocli/: sopro_pb2.py  sopro_pb2_grpc.py
