[project]
name = "soprocli"
version = "0.0.2"
authors = [
  { name="sopro-dev"},
]
description = "A client for the sopro server"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/sopro-dev/soprocli_python"
Issues = "https://github.com/sopro-dev/soprocli_python/issues"